--- a/index.html
+++ b/index.html
@@ -13,23 +13,12 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="frame">
       <div class="center">
         <img src="./images/image-qr-code.png" alt="QR code" />
-        <p>Improve your front-end skills by building projects</p>
+        <p class="bold">Improve your front-end skills by building projects</p>
 
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
@@ -43,7 +32,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Kaung Myat Thu</a>.
+        >. Coded by
+        <a href="https://github.com/HarutoAmakawa" target="_blank"
+          >Kaung Myat Thu</a
+        >.
       </div>
     </footer>
   </body>
