--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="frame">
-      <div class="center">
+    <main>
+      <div class="container">
         <img src="./images/image-qr-code.png" alt="QR code" />
-        <p class="bold">Improve your front-end skills by building projects</p>
+        <h1>Improve your front-end skills by building projects</h1>
 
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
       </div>
-    </div>
+    </main>
 
     <footer>
       <div class="attribution">
